# spark-connect-local

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
spark/: Dockerfile  entrypoint.sh  requirements.txt
src/: read_sample.py
